# scraper-cli

./: .gitignore  config.json  pyproject.toml
src/scraper_cli/: cli.py  config.py  db.py  fetcher.py  parser.py  summarizer.py  utils.py
src/scraper_cli/server/: main.py  models.py  runner.py  ws.py
webapp/: package-lock.json  package.json
webapp/src/: App.tsx  api.ts  types.ts
webapp/src/components/: JobDetail.tsx  JobsTable.tsx  NewJobForm.tsx
