[project]
name = "scraper-cli"
version = "0.1.1"
description = "Modern interactive web scraper CLI (Typer + Rich + SQLite)"
authors = [
    {name = "Walid Newaz",email = "mdwalid@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer (>=0.17.4,<0.18.0)",
    "rich (>=14.1.0,<15.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "beautifulsoup4 (>=4.13.5,<5.0.0)",
    "lxml (>=6.0.1,<7.0.0)"
]

[tool.poetry]
packages = [{include = "scraper_cli", from = "src"}]
#packages = [{ include = "scraper" }]


#[tool.poetry.dependencies]
#python = "^3.10"
#typer = "^0.12.0"
#rich = "^13.0.0"
#httpx = "^0.27.0"
#beautifulsoup4 = "^4.12.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.13.0"
mypy = "^1.18.1"
pytest = "^8.4.2"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = false

[tool.poetry.scripts]
scraper-cli = "scraper_cli.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
